--- a/client/src/components/Pages/Search.css
+++ b/client/src/components/Pages/Search.css
@@ -6,4 +6,19 @@ input {
     width: 800px;
     height: 50px;
     font-size: 25px;
+    border-radius: 5px;
+}
+
+.spacer {
+    flex: 1; /* This will take all available space */
+}
+
+.submit__btn {
+    width: 120px;
+    height: 50px;
+    background: rgb(34,34,34);
+    color: whitesmoke;
+    font-size: 20px;
+    font-weight: bolder;
+    border-radius: 5px;
 }
