styled navbar, jumbotron, search bar, and submit button.

--- a/client/src/components/Jumbotron/Jumbotron.css
+++ b/client/src/components/Jumbotron/Jumbotron.css
@@ -5,5 +5,14 @@
     text-align: center;
     font-size: 25px;
     margin-top: 80px;
-    color: black;
+    color: whitesmoke;
+    text-shadow: black 2px;
+    background: white;
 }
+
+.jumbotron img {
+    width: 100%;
+    position: relative;
+    z-index: 100;
+}
+
