--- a/client/src/components/Pages/Search.css
+++ b/client/src/components/Pages/Search.css
@@ -3,7 +3,7 @@
 }
 
 input {
-    width: 800px;
+    width: 60%;
     height: 50px;
     font-size: 25px;
     border-radius: 5px;
@@ -14,11 +14,16 @@ input {
 }
 
 .submit__btn {
-    width: 120px;
-    height: 50px;
+    width: 300px;
+    height: 60px;
     background: rgb(34,34,34);
     color: whitesmoke;
-    font-size: 20px;
+    font-size: 25px;
     font-weight: bolder;
     border-radius: 5px;
+    cursor: pointer;
+}
+
+.submit__btn:hover {
+    color: rgb(104, 104, 103);
 }
