--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -1,9 +1,11 @@
 .navbar {
     width: 100%;
-    height: 80px;
+    max-height: 100px;
     top: 0;
     left: 0;
     position: fixed;
+    padding: 30px;
+    background: rgb(30, 30, 30);
 }
 
 .navbar__logo {
@@ -11,7 +13,7 @@
 }
 
 .navbar__logo a {
-    color: white;
+    color: whitesmoke;
     text-decoration: none;
     font-size: 30px;
     font-weight: bolder;
